// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PricingPlan > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</section>"
`;

exports[`PricingPlan > renders with badge correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with badge object correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with badge slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div>Badge slot
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with billing cycle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">&nbsp;</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with billing period correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with billing slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0">Billing slot</div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">Body slot</div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with button correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <!--v-if-->
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlan > renders with button slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if-->Button slot<div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default rounded-xl">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description slot</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with discount correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with discount slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">Discount slot</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with features correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with features object correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with features slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">Features slot</ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">Footer slot</div>
</div>"
`;

exports[`PricingPlan > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <div data-slot="header" class="">Header slot</div>
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring-2 ring-inset ring-primary">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 grid-cols-1 lg:grid-cols-3 justify-between divide-y lg:divide-y-0 lg:divide-x divide-default bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0 lg:col-span-2 pb-6 lg:pb-0 lg:pr-6 justify-center">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <!--v-if-->
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0 lg:grid lg:grid-cols-2 lg:mt-12">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center lg:justify-center lg:items-center lg:p-6 lg:max-w-xs lg:w-full lg:mx-auto">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with price correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <!--v-if-->
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$249</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with price slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">Price slot</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with scale correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default lg:scale-[1.1] lg:z-[1]">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with tagline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`PricingPlan > renders with tagline slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline slot</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with terms correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with terms slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms slot</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`PricingPlan > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title slot</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col items-center justify-end gap-12">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-default ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-elevated/50">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-inverted">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="truncate text-2xl sm:text-3xl text-pretty font-semibold text-inverted">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-base text-pretty mt-2 text-dimmed">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="line-through text-xl sm:text-2xl text-dimmed">$249</div>
      <div data-slot="price" class="text-3xl sm:text-4xl font-semibold text-inverted">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="truncate text-xs font-medium text-dimmed">billed annually</span><span data-slot="billingCycle" class="truncate text-xs font-medium text-dimmed">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-sm truncate text-dimmed">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-sm truncate text-dimmed">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-sm truncate text-dimmed">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;

exports[`PricingPlan > renders with variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative grid rounded-lg p-6 lg:p-8 xl:p-10 gap-6 bg-elevated/50 ring ring-default">
  <!--v-if-->
  <div data-slot="body" class="flex flex-col min-w-0">
    <div data-slot="titleWrapper" class="flex items-center gap-3">
      <div data-slot="title" class="text-highlighted truncate text-2xl sm:text-3xl text-pretty font-semibold">Title</div><span data-slot="badge" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 rounded-md bg-primary/10 text-primary ring ring-inset ring-primary/25"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
    </div>
    <div data-slot="description" class="text-muted text-base text-pretty mt-2">Description</div>
    <div data-slot="priceWrapper" class="flex items-center gap-1 mt-6">
      <div data-slot="discount" class="text-muted line-through text-xl sm:text-2xl">$249</div>
      <div data-slot="price" class="text-highlighted text-3xl sm:text-4xl font-semibold">$199</div>
      <div data-slot="billing" class="flex flex-col justify-between min-w-0"><span data-slot="billingPeriod" class="text-toned truncate text-xs font-medium">billed annually</span><span data-slot="billingCycle" class="text-muted truncate text-xs font-medium">/month</span></div>
    </div>
    <ul data-slot="features" class="flex flex-col gap-3 flex-1 mt-6 grow-0">
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 1</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 2</span></li>
      <li data-slot="feature" class="flex items-center gap-2 min-w-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="featureIcon" class="size-5 shrink-0 text-primary"></svg><span data-slot="featureTitle" class="text-muted text-sm truncate">Feature 3</span></li>
    </ul>
  </div>
  <div data-slot="footer" class="flex flex-col gap-6 items-center justify-end">
    <div data-slot="tagline" class="text-base font-semibold text-default">Tagline</div>
    <!--v-if--><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 w-full justify-center text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
      <!--v-if--><span data-slot="label" class="truncate">Buy now</span>
      <!--v-if-->
    </button>
    <div data-slot="terms" class="text-xs/5 text-muted text-center text-balance">Terms</div>
  </div>
</div>"
`;
